# cirkit

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
cirkit/: __init__.py  __main__.py  confidence.py  convergence.py  engine.py  graph.py  llm.py  signal.py  state.py
cirkit/nodes/: __init__.py  and_gate.py  base.py  battery.py  motor.py  resistor.py  router.py  sink.py
concepts/convergence/: index.html
concepts/engine/: index.html
concepts/nodes/: index.html
concepts/signals/: index.html
concepts/wires/: index.html
docs/: index.md
docs/concepts/: convergence.md  engine.md  nodes.md  signals.md  wires.md
docs/guides/: adding-nodes.md  circuit-design.md  django.md  quickstart.md  ui.md
docs/reference/: api.md  architecture.md  cli.md  json-schema.md  node-config.md  roadmap.md
examples/: pr_review.json  resume_html.json
guides/adding-nodes/: index.html
guides/circuit-design/: index.html
guides/django/: index.html
guides/ui/: index.html
search/: search_index.json
tests/: conftest.py  test_and_gate_modes.py  test_cache_miss_convergence.py  test_confidence.py  test_convergence.py  test_early_exit.py  test_engine_mock_motor.py  test_engine_no_motor.py  test_engine_oscillation.py  test_graph_validation.py  test_motor_cache.py  test_motor_delta.py  test_motor_empty_input.py  test_motor_model.py  test_motor_session.py  test_nodes.py  test_router.py  test_signal.py  test_ui_circuit_utils.py  test_wire_roles.py
ui/: circuit_utils.py  index.html  server.py  urls.py  views.py
(+5 files in other folders)
