[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cirkit"
version = "0.1.0"
description = "Signal circuit reasoning engine — convergence-based LLM orchestration"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cirkit = "cirkit.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
