[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cirkit"
version = "0.1.0"
description = "Signal circuit reasoning engine — convergence-based LLM orchestration"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cirkit = "cirkit.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=7",
]
docs = [
  "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
include = ["cirkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
